2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: csc doesn't like iso-2.

2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj:
	* Mono.Addins/TypeExtensionNode.cs:
	* Mono.Addins/AddinAuthorAttribute.cs:
	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins/CustomExtensionAttribute.cs:
	* Mono.Addins.Database/IAssemblyReflector.cs:
	* Mono.Addins/ExtensionAttributeAttribute.cs: Make sure the
	  solution builds on MS.NET 2.0.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinScanner.cs: Fix bug #541661 -
	  Assemblies with capital .DLL cannot be loaded.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.csproj:
	* Mono.Addins/AddinAttribute.cs:
	* Mono.Addins/AddinAuthorAttribute.cs:
	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins/AddinCategoryAttribute.cs:
	* Mono.Addins/AddinLocalizerGettextAttribute.cs: Allow
	  specifying some add-in properties using attribtues.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins.Description/AddinDescription.cs: Added support
	  for multiple .addin.xml files in a single assembly.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.csproj:
	* Mono.Addins/AddinManager.cs:
	* Mono.Addins/ExtensionNode.cs:
	* Mono.Addins/ExtensionTree.cs:
	* Mono.Addins/ExtensionContext.cs:
	* Mono.Addins/TypeExtensionNode.cs:
	* Mono.Addins/ExtensionNodeList.cs:
	* Mono.Addins/ExtensionAttribute.cs:
	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins/ExtensionNodeAttribute.cs:
	* Mono.Addins/NodeAttributeAttribute.cs:
	* Mono.Addins/ExtensionPointAttribute.cs:
	* Mono.Addins.Database/AddinUpdateData.cs:
	* Mono.Addins/CustomExtensionAttribute.cs:
	* Mono.Addins/ExtensionAttributeAttribute.cs:
	* Mono.Addins.Database/IAssemblyReflector.cs:
	* Mono.Addins/TypeExtensionPointAttribute.cs:
	* Mono.Addins.Description/ExtensionNodeType.cs: